# hexstack

./: .gitignore  Cargo.toml  README.md  build.rs  build_itch.sh  build_wasm.sh  build_web.sh  hexstack.js  hexstack.wasm  hexstack_bg.wasm  index.html  rules.html
benches/: state_manip.rs
gfx_src/: make_tiles.sh  make_tiles_tex.sh  pieces_doodle.clip  tiles.blend  tiles.blend1  wooden.blend  wooden.blend1
gfx_src/tiles/: .0001.png-autosave.kra
mq_js_bundle/: README.md
src/: arrows.rs  assets.rs  board.rs  editor.rs  engine_debug.rs  game.rs  gameplay.rs  lib.rs  main.rs  theme.rs  ui.rs
src/assets/: mipmaps.rs  mod.rs
src/tokonoma/: bitboards.rs  board.rs  matches.rs  mod.rs
src/ui/: editor.rs  engine_eval.rs  match_config.rs  mod.rs  net_client.rs  rulesheet.rs  theme_config.rs
