[package]
name = "hexstack"
version = "0.1.0"
edition = "2021"

[dependencies]

itertools = "0.13.0"
egui = "0.21.0"
egui-macroquad = "0.15"
macroquad = { version = "0.3.23", default-features = false }
futures = "0.3.31"
tokio = { version = "1.42.0", features = ["rt"] }
lazy_static = "1.5.0"
rand = "0.8.5"
memoize = "0.4.2"

[build-dependencies]
itertools = "0.13.0"
