[package]
name = "hexstack"
version = "0.6.1"
edition = "2021"
default-run = "hexstack"

[dependencies]

itertools = "0.13.0"
egui = "0.21.0"
egui-macroquad = "0.15"
macroquad = { version = "0.3.23", default-features = false, features=["audio"] }
futures = "0.3.31"
tokio = { version = "1.42.0", features = ["rt"] }
lazy_static = "1.5.0"
rand = "0.8.5"
memoize = "0.4.2"
multiset = "0.0.5"
indicatif = "0.17.9"
nonmax = "0.5.5"
circular-buffer = "0.1.9"
image = {version = "0.25.5", default-features = false, features = ["png"]}

[build-dependencies]
itertools = "0.13.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "state_manip"
harness = false
